--- a/assets/styles/frontend/common/components/box/products-slider.less
+++ b/assets/styles/frontend/common/components/box/products-slider.less
@@ -5,6 +5,12 @@
         margin-bottom: 40px;
     }
 
+    &--big-gap {
+        @media @query-lg {
+            margin-bottom: 80px;
+        }
+    }
+
     &__title {
         margin-bottom: 10px;
         line-height: 36px;
