--- a/assets/styles/frontend/common/components/in/paging.less
+++ b/assets/styles/frontend/common/components/in/paging.less
@@ -67,6 +67,8 @@
 
             &--separate {
                 min-width: auto;
+                margin-left: 0;
+                margin-right: 0;
 
                 font-weight: 700;
                 box-shadow: none;
