--- a/assets/styles/frontend/common/components/list/products-line.less
+++ b/assets/styles/frontend/common/components/list/products-line.less
@@ -28,6 +28,10 @@
 
             text-decoration: none;
             color: @color-base;
+
+            &:hover {
+                color: @color-base;
+            }
         }
 
         &__position {
