--- a/assets/styles/frontend/common/layout/header/top-bar.less
+++ b/assets/styles/frontend/common/layout/header/top-bar.less
@@ -77,18 +77,21 @@
                     font-size: 11px + 1px;
                     font-family: @font-alt;
                     text-transform: uppercase;
+                    text-decoration: none;
+                    color: @color-base;
+
+                    &:hover {
+                        color: @color-base;
+                    }
 
                     &__title {
                         padding: 2px 5px;
                         margin-right: 10px;
 
                         font-weight: 700;
-
-                        &--colored {
-                            background-color: @color-turquoise;
-                            border-radius: @radius-small;
-                            color: @color-f;
-                        }
+                        background-color: @color-turquoise;
+                        border-radius: @radius-small;
+                        color: @color-f;
                     }
                 }
             }
