--- a/templates/Front/Content/Advert/headerText.html.twig
+++ b/templates/Front/Content/Advert/headerText.html.twig
@@ -1,13 +1,11 @@
 
 <ul class="top-bar__menu top-bar__menu--mobile-visible">
     <li class="top-bar__menu__item">
-        <span class="top-bar__menu__item__text">
-            <span class="top-bar__menu__item__text__title top-bar__menu__item__text__title--colored">
-                <a href= "{{ headerLink }}" class="top-bar__menu__item__link"> 
-                    {{ headerTitle }}:
+        <a href= "{{ headerLink }}" class="top-bar__menu__item__text">
+            <span class="top-bar__menu__item__text__title">
+                {{ headerTitle }}
             </span>
-                    {{ headerText}}
-                </a>
-        </span>
+            {{ headerText}}
+        </a>
     </li>
 </ul>
