--- a/templates/Front/Content/Product/boxDetail.html.twig
+++ b/templates/Front/Content/Product/boxDetail.html.twig
@@ -327,7 +327,7 @@
 
             <div class="web__line">
                 <div class="web__container">
-                    <div class="box-products-slider">
+                    <div class="box-products-slider box-products-slider--big-gap">
                         <h2 class="box-products-slider__title">
                             {{ 'Nakupte produkt ve výhodném setu'|trans }}
                         </h2>
