--- a/templates/Front/Content/ReasonsToBuy/index.html.twig
+++ b/templates/Front/Content/ReasonsToBuy/index.html.twig
@@ -42,7 +42,7 @@
                     {% include 'Front/Svg/box.svg' %}
                 </div>
                 <p class="list-reasons-to-buy__item__text">
-                    {{ 'Nejširší sortiment - v nabídce více než 100 000 produktů'|trans }}
+                    {{ 'Nejširší sortiment - v nabídce více než 100&nbsp;000 produktů'|trans|raw }}
                 </p>
             </li>
             <li class="list-reasons-to-buy__item">
