--- a/assets/styles/frontend/common/components/box/detail.less
+++ b/assets/styles/frontend/common/components/box/detail.less
@@ -168,7 +168,7 @@
 
         &__subtitle {
             line-height: 30px;
-            margin: 0;
+            margin: 0 0 20px 0;
 
             font-size: @font-size-big;
         }
