--- a/assets/styles/frontend/common/components/list/variants.less
+++ b/assets/styles/frontend/common/components/list/variants.less
@@ -1,4 +1,3 @@
-@list-variants-prices-width: 33%;
 @list-variants-image-size: 70px;
 @list-variants-item-gap: 15px;
 @list-variants-item-prices-size: 24px;
@@ -173,7 +172,8 @@
             margin-bottom: 15px;
 
             @media @query-vl {
-                width: @list-variants-prices-width;
+                width: auto;
+                flex: 1;
                 margin-bottom: 0;
             }
 
@@ -202,6 +202,7 @@
                     display: block;
                     line-height: 18px;
                     margin-bottom: 0;
+                    padding-right: 25px;
 
                     font-size: @font-size-extra-small + 1px;
                     font-family: @font-alt;
@@ -214,7 +215,7 @@
             width: 100%;
 
             @media @query-vl {
-                width: calc(~"100% - @{list-variants-prices-width}");
+                width: auto;
             }
         }
     }
