design: edit small css issues after CR

--- a/assets/styles/frontend/common/components/box/preview.less
+++ b/assets/styles/frontend/common/components/box/preview.less
@@ -48,7 +48,7 @@
     }
 
     &__action {
-        background-attachment: @color-f;
+        background-color: @color-f;
     }
 
     &__coupone {
