--- a/templates/Front/Content/AboutUs/info.html.twig
+++ b/templates/Front/Content/AboutUs/info.html.twig
@@ -8,38 +8,58 @@
     {% set domainId = getDomain().id %}
     <div class="web__line">
         <div class="web__container">
-            <h1 class="in-title in-title--big in-title--center">
-                {{ 'Kontakt'|trans }}
-            </h1>
             <div class="box-contact">
-                <div class="box-contact__left">
-                    <div class="box-contact__block">
-                        {% if getShopInfoPhoneNumber() is not null %}
-                            <a href="tel:{{ getShopInfoPhoneNumber() }}" class="box-contact__block__text">
-                                {% include 'Front/Svg/phone.svg' %}
-                                {{ 'Volejte na '|trans }} {{ getShopInfoPhoneNumber() }}
+                <div class="box-contact__info">
+                    <div class="box-contact__info__wrap">
+                        <div class="box-contact__info__item">
+                            {% if getShopInfoPhoneNumber() is not null %}
+                                <a class="box-contact__info__link" href="tel:{{ getShopInfoPhoneNumber() }}">
+                                    <span class="box-contact__info__link__icon box-contact__info__link__icon--phone">{% include 'Front/Svg/phone.svg' %}</span>
+                                    <span class="box-contact__info__link__text">
+                                        {{ getShopInfoPhoneNumber() }}
+                                    </span>
+                                </a>
+                            {% endif %}
+                            <span class="box-contact__info__text"> 
+                                {{ getShopInfoPhoneHours() }}
+                            </span>
+                        </div>
+                        <div class="box-contact__info__item">
+                            <a class="box-contact__info__link" href="mailto:{{ getShopInfoEmail() }}">
+                                <span class="box-contact__info__link__icon box-contact__info__link__icon--info">{% include 'Front/Svg/info.svg' %}</span>
+                                <span class="box-contact__info__link__text">
+                                    {{ getShopInfoEmail() }}
+                                </span>
                             </a>
-                        {% endif %}
-                        <div class="box-contact__block__info">
-                            {{ getShopInfoPhoneHours() }}
+                            <span class="box-contact__info__text"> 
+                                {{ 'Odpovíme Vám v nejkratším možném termínu.'|trans }}
+                            </span>
                         </div>
-                    </div>
-                    <div class="box-contact__block box-contact__block--no-bottom-gap">
-                        <div class="box-contact__block__text">
-                            <i class="svg svg-mail"></i>
-                            <a href="mailto:{{ getShopInfoEmail() }}">{{ getShopInfoEmail() }}</a>
+                        <div class="box-contact__info__item box-contact__info__item--big">
+                            <p class="box-contact__info__item__title">
+                                {{ 'S čím potřebujete pomoct?'|trans }}
+                            </p>
+
+                            <ul class="list-simple js-not-implemented-yet">
+                                <li class="list-simple__item svg-fish">
+                                    <a href="#">Vrácení zboží ve 14 denní lhůtě (odstoupení od smlouvy)</a>
+                                </li>
+                                <li class="list-simple__item svg-fish">
+                                    <a href="#">Změna nebo storno objednávky</a>
+                                </li>
+                                <li class="list-simple__item svg-fish">
+                                    <a href="#">Chci reklamovat zboží</a>
+                                </li>
+                            </ul>
                         </div>
-                        <div class="box-contact__block__info">
-                            {{ 'Odpovíme Vám v nejkratším možném termínu.'|trans }}
-                        </div>
-                    </div>
-                </div>
-                <div class="box-contact__right">
-                    <div class="box-contact__right__title">
-                        {{ 'S čím potřebujete pomoct?'|trans }}
                     </div>
                 </div>
             </div>
+
+            <h1 class="box-contact__title">
+                {{ 'Kamenná prodejna'|trans }}
+            </h1>
+
             <div class="wrap-article">
                 <div class="wrap-article__row">
                     <div class="wrap-article__row__half padding-right-20">
