--- a/assets/styles/frontend/common/components/box/contact.less
+++ b/assets/styles/frontend/common/components/box/contact.less
@@ -2,7 +2,21 @@
 @box-contact-info-item-gap-small: 30px;
 @box-contact-info-link-icon-width: 24px;
 
+@box-contact-store-left-width: 61%;
+@box-contact-store-row-left-width: 40%;
+
+@box-contact-store-gallery-image-gap: 12px;
+
 .box-contact {
+    &__title {
+        text-align: center;
+        margin-bottom: 29px;
+
+        &--big-gap {
+            margin-bottom: 43px;
+        }
+    }
+
     &__info {
         margin-bottom: 40px;
         padding: 20px;
@@ -57,7 +71,8 @@
 
                 text-transform: uppercase;
                 font-weight: 700;
-                font-size: 16px;
+                font-size: 16px + 1px;
+                font-family: @font-alt;
             }
         }
 
@@ -69,7 +84,8 @@
             margin-bottom: 7px;
 
             color: @color-base;
-            font-size: 20px;
+            font-size: 20px + 1px;
+            font-family: @font-alt;
             text-decoration: none;
 
             &:hover {
@@ -115,8 +131,165 @@
         &__text {
             line-height: 24px;
 
-            font-size: @font-size-small;
+            font-size: @font-size-small + 1px;
+            font-family: @font-alt;
             color: @color-base;
+        }
+    }
+
+    &__store {
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 40px;
+
+        @media @query-vl {
+            flex-direction: row;
+        }
+
+        &__left {
+            width: 100%;
+            margin-bottom: 20px;
+
+            @media @query-vl {
+                width: @box-contact-store-left-width;
+                padding-right: 40px;
+                margin-bottom: 0;
+            }
+        }
+
+        &__right {
+            width: 100%;
+
+            @media @query-vl {
+                width: calc(~"100% - @{box-contact-store-left-width}");
+                padding-right: 44px;
+            }
+        }
+
+        &__gallery {
+            display: flex;
+            flex-direction: row;
+
+            &__main {
+                margin-right: @box-contact-store-gallery-image-gap;
+
+                font-size: 0;
+            }
+
+            &__alt {
+                display: flex;
+                flex-direction: column;
+
+                font-size: 0;
+
+                img:first-child {
+                    margin-bottom: @box-contact-store-gallery-image-gap;
+                }
+            }
+
+            img {
+                border-radius: @radius-medium;
+            }
+        }
+
+        &__row {
+            display: flex;
+            flex-direction: column;
+            margin-bottom: 12px;
+
+            @media @query-md {
+                flex-direction: row;
+            }
+
+            &:last-child {
+                margin-bottom: 0;
+            }
+
+            &__left {
+                width: 100%;
+                padding-right: 20px;
+                line-height: 24px;
+                margin-bottom: 8px;
+
+                font-size: 16px + 1px;
+                font-family: @font-alt;
+                color: @color-0;
+
+                @media @query-md {
+                    width: @box-contact-store-row-left-width;
+                    margin-bottom: 0;
+                }
+
+                &--bottom {
+                    width: 100%;
+                    padding-right: 0;
+                    line-height: 30px;
+                    margin-bottom: 0;
+                }
+
+                a {
+                    display: inline-block;
+                }
+            }
+
+            &__right {
+                width: 100%;
+                line-height: 24px;
+
+                font-size: @font-size-small + 1px;
+                font-family: @font-alt;
+
+                @media @query-md {
+                    width: calc(~"100% - @{box-contact-store-row-left-width}");
+                }
+            }
+        }
+    }
+
+    &__map {
+        overflow: hidden;
+        margin-bottom: 40px;
+
+        font-size: 0;
+        border-radius: @radius-medium;
+    }
+
+    &__payment {
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 90px;
+
+        @media @query-md {
+            flex-direction: row;
+        }
+        
+        &__item {
+            width: 100%;
+            line-height: 24px;
+            margin-bottom: 20px;
+
+            font-family: @font-alt;
+            font-size: @font-size-small;
+
+            @media @query-md {
+                width: @calc-base/2;
+                padding-right: 20px;
+                margin-bottom: 0;
+            }
+
+            @media @query-vl {
+                width: 40%;
+            }
+
+            &:last-child {
+                margin-bottom: 0;
+            }
+
+            &__text-big {
+                margin: 0;
+
+                font-size: 16px + 1px;
+            }
         }
     }
 }
