--- a/templates/Front/Content/ContactForm/contactForm.html.twig
+++ b/templates/Front/Content/ContactForm/contactForm.html.twig
@@ -1,5 +1,5 @@
 {{ form_start(form, {attr: {'data-on-submit': 'contactFormAjaxSubmit'}}) }}
-<div class="in-title in-title--center in-title--big">{{ mainText|raw }}</div>
+<h2 class="in-title in-title--center in-title--with-gap">{{ mainText|raw }}</h2>
 
 {{ form_errors(form) }}
 <div class="wrap-article__row">
